--- a/review/pr-134/_modules/merlin/systems/dag/ops/session_filter.html
+++ b/review/pr-134/_modules/merlin/systems/dag/ops/session_filter.html
@@ -123,7 +123,7 @@
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="FilterCandidates.from_config"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.from_config">[docs]</a>    <span class="nd">@classmethod</span>
-    <span class="k">def</span> <span class="nf">from_config</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">config</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">from_config</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">config</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="s2">&quot;FilterCandidates&quot;</span><span class="p">:</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Instantiate a class object given a config.</span>
 
