--- a/review/pr-134/genindex.html
+++ b/review/pr-134/genindex.html
@@ -183,6 +183,10 @@
 </li>
       </ul></li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.from_path">from_path() (merlin.systems.dag.ops.tensorflow.PredictTensorflow class method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="I">I</h2>
