--- a/review/pr-157/_modules/merlin/systems/dag/ops/operator.html
+++ b/review/pr-157/_modules/merlin/systems/dag/ops/operator.html
@@ -244,14 +244,18 @@
 
     <span class="nd">@classmethod</span>
     <span class="nd">@abstractmethod</span>
-    <span class="k">def</span> <span class="nf">from_config</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">config</span><span class="p">:</span> <span class="nb">dict</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">from_config</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">config</span><span class="p">:</span> <span class="nb">dict</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Instantiate a class object given a config.</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
 <span class="sd">        config : dict</span>
-
+<span class="sd">        **kwargs</span>
+<span class="sd">          contains the following:</span>
+<span class="sd">            * model_repository: Model repository path</span>
+<span class="sd">            * model_version: Model version</span>
+<span class="sd">            * model_name: Model name</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
