--- a/review/pr-170/_modules/merlin/systems/dag/ops/softmax_sampling.html
+++ b/review/pr-170/_modules/merlin/systems/dag/ops/softmax_sampling.html
@@ -162,16 +162,7 @@
         <span class="bp">self</span><span class="p">,</span> <span class="n">input_schema</span><span class="p">:</span> <span class="n">Schema</span><span class="p">,</span> <span class="n">col_selector</span><span class="p">:</span> <span class="n">ColumnSelector</span><span class="p">,</span> <span class="n">prev_output_schema</span><span class="p">:</span> <span class="n">Schema</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Schema</span><span class="p">:</span>
         <span class="sd">&quot;&quot;&quot;Describe the operator&#39;s outputs&quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">Schema</span><span class="p">(</span>
-            <span class="p">[</span>
-                <span class="n">ColumnSchema</span><span class="p">(</span>
-                    <span class="s2">&quot;ordered_ids&quot;</span><span class="p">,</span>
-                    <span class="n">dtype</span><span class="o">=</span><span class="n">input_schema</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_input_col_name</span><span class="p">)</span><span class="o">.</span><span class="n">dtype</span><span class="p">,</span>
-                    <span class="n">is_list</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-                    <span class="n">is_ragged</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-                <span class="p">)</span>
-            <span class="p">]</span>
-        <span class="p">)</span></div>
+        <span class="k">return</span> <span class="n">Schema</span><span class="p">([</span><span class="n">ColumnSchema</span><span class="p">(</span><span class="s2">&quot;ordered_ids&quot;</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="n">is_list</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">is_ragged</span><span class="o">=</span><span class="kc">True</span><span class="p">)])</span></div>
 
 <div class="viewcode-block" id="SoftmaxSampling.transform"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.transform">[docs]</a>    <span class="k">def</span> <span class="nf">transform</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">df</span><span class="p">:</span> <span class="n">InferenceDataFrame</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">InferenceDataFrame</span><span class="p">:</span>
         <span class="sd">&quot;&quot;&quot;Transform the dataframe by applying this operator to the set of input columns&quot;&quot;&quot;</span>
